fix post-preview title display on mobile

--- a/themes/hollow/source/css/base.styl
+++ b/themes/hollow/source/css/base.styl
@@ -150,6 +150,8 @@ nav
       font-size 2em
       @media screen and (max-width: 768px)
         font-size 1.5em
+      @media screen and (max-width: 480px)
+        width 100%
       &.archive
         font-size 22px
         width 100%
